@@ -1,3 +1,6 @@
+* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
+- Update Hiera 4 to Hiera 5
+
 * Fri May 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
 - Removed all GDM and Dconf settings - BREAKING
   - Dconf has been moved to its own module
